--- a/index.html
+++ b/index.html
@@ -1,43 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Sign Up Form</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Sign Up Form</title>
-</head>
-
-<body>
-  <div class="leftContent">
-    <div class="leftLogo">
-      <h1>Coding Academy</h1>
+  <body>
+    <div class="leftContent">
+      <div class="leftLogo">
+        <h1>EndMods</h1>
+      </div>
     </div>
-  </div>
-  <div class="rightContent">
-    <form action="./" method="post">
-      <div class="inputField">
-        <label for="username">Username</label>
-        <input type="text" autocomplete="username" name="username" required>
-        <p class="help">Please enter your username.</p>
-      </div>
-      <div class="inputField">
-        <label for="email">Email</label>
-        <input type="email" autocomplete="email" name="email" required>
-        <p class="help">Please enter your email.</p>
-      </div>
-      <div class="inputField">
-        <label for="password">Password</label>
-        <input type="password" autocomplete="new-password" name="password" required>
-        <p class="help">Please enter your password.</p>
-      </div>
-      <div>
-        <button type="submit">Submit</button>
-      </div>
-
-    </form>
-  </div>
-</body>
-
+    <div class="rightContent">
+      <h2>
+        This is not a real online service! Lorem ipsum dolor sit amet
+        consectetur, adipisicing elit. Necessitatibus, commodi! Sign up now to
+        get started.
+      </h2>
+      <h2>You <em>know</em> you want to.</h2>
+      <form class="signUpForm" action="./" method="post">
+        <div class="inputs">
+          <div>
+            <div>
+              <label for="firstname">First Name</label>
+              <input
+                class="inputField"
+                type="text"
+                autocomplete="firstname"
+                name="firstname"
+                required
+              />
+              <p class="help">Please enter your First Name.</p>
+            </div>
+            <div>
+              <label for="email">Email</label>
+              <input
+                class="inputField"
+                type="email"
+                autocomplete="email"
+                name="email"
+                required
+              />
+              <p class="help">Please enter your email.</p>
+            </div>
+            <div>
+              <label for="password">Password</label>
+              <input
+                class="inputField"
+                type="password"
+                autocomplete="new-password"
+                name="password"
+                required
+              />
+              <p class="help">Please enter your password.</p>
+            </div>
+          </div>
+          <div>
+            <div>
+              <label for="lastname">Last Name</label>
+              <input
+                class="inputField"
+                type="text"
+                autocomplete="lastname"
+                name="lastname"
+                required
+              />
+              <p class="help">Please enter your lastname.</p>
+            </div>
+            <div>
+              <label for="phone">Phone Number</label>
+              <input
+                class="inputField"
+                type="tel"
+                autocomplete="tel"
+                name="phone"
+                required
+              />
+              <p class="help">Please enter your phone number.</p>
+            </div>
+            <div>
+              <label for="password">Confirm Password</label>
+              <input
+                class="inputField"
+                type="password"
+                autocomplete="new-password"
+                name="confirm-password"
+                required
+              />
+              <p class="help">Please confirm your password.</p>
+            </div>
+          </div>
+        </div>
+        <button type="submit">Create Account</button>
+        <p>Already have an account? <a href="#">Log in!</a></p>
+      </form>
+    </div>
+  </body>
 </html>
