--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Sign Up Form</title>
+    <script src="script.js" defer></script>
   </head>
 
   <body>
@@ -50,6 +51,7 @@
               <label for="password">Password</label>
               <input
                 class="inputField"
+                id="pass"
                 type="password"
                 autocomplete="new-password"
                 name="password"
@@ -85,12 +87,13 @@
               <label for="password">Confirm Password</label>
               <input
                 class="inputField"
+                id="confirmPass"
                 type="password"
                 autocomplete="new-password"
                 name="confirm-password"
                 required
               />
-              <p class="help">Please confirm your password.</p>
+              <p id="passHelp" class="help">Please confirm your password.</p>
             </div>
           </div>
         </div>
